# UW-timetable-planner

./: .pre-commit-config.yaml  pyproject.toml  readme.md
src/UW_timetable_planner/: course.py  data_model.py  filters.py  main.py  timetable.py  timetable_planer.py  utils.py  web.py
tests/: test_corse.py
tests/data/: CSE 122.json  CSE 123.json  PHYS 121.json
